SubBt/force-app/main/default/objects/Purchase_Order_Item__c/Purchase_Order_Item__c.object-meta.xml
<CustomObject>
    <description>This object is used to create purchase order items</description>
    <label>Purchase Order Line</label>
    <nameField>
        <label>PO Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchase Order Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>