SubBt/force-app/main/default/objects/Purchase_Order_Item__c/fields/Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>Auto_Number__c</fullName>
    <displayFormat>POL-{00000}</displayFormat>
    <label>All PO Line #</label>
    <type>AutoNumber</type>
</CustomField>