SubBt/force-app/main/default/objects/Purchase_Order_Item__c/fields/BackOrdered__c.field-meta.xml
<CustomField>
    <fullName>BackOrdered__c</fullName>
    <formula>Quantity__c -  Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Backordered</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>