SubBt/force-app/main/default/objects/Purchase_Order_Item__c/fields/Discounted_Amount__c.field-meta.xml
<CustomField>
    <fullName>Discounted_Amount__c</fullName>
    <formula>Total_Price__c *  Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discounted Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>