SubBt/force-app/main/default/objects/Purchase_Order_Item__c/fields/Expense_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>Expense_GL_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expense GL Account</label>
    <referenceTo>GL_Account__c</referenceTo>
    <relationshipLabel>Purchase Order Lines</relationshipLabel>
    <relationshipName>Purchase_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>