SubBt/force-app/main/default/objects/Purchase_Order_Item__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exterior Wall Mount</fullName>
            </value>
            <value>
                <fullName>M. Bedroom</fullName>
            </value>
            <value>
                <fullName>Bedroom 2</fullName>
            </value>
            <value>
                <fullName>Bedroom 3</fullName>
            </value>
            <value>
                <fullName>M. Closet</fullName>
            </value>
            <value>
                <fullName>Laundry</fullName>
            </value>
            <value>
                <fullName>Dining</fullName>
            </value>
            <value>
                <fullName>Pantry</fullName>
            </value>
            <value>
                <fullName>M. Bathroom</fullName>
            </value>
            <value>
                <fullName>Bathroom 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>