SubBt/force-app/main/default/objects/Purchase_Order_Item__c/fields/Ordered_Date__c.field-meta.xml
<CustomField>
    <fullName>Ordered_Date__c</fullName>
    <inlineHelpText>This is the date the product is being ordered.</inlineHelpText>
    <label>Ordered Date</label>
    <type>Date</type>
</CustomField>