SubBt/force-app/main/default/objects/Purchase_Order_Item__c/fields/Received__c.field-meta.xml
<CustomField>
    <fullName>Received__c</fullName>
    <label>Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>