SubBt/force-app/main/default/objects/Purchase_Order_Item__c/fields/RFQ_Item__c.field-meta.xml
<CustomField>
    <fullName>RFQ_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RFQ Item</label>
    <referenceTo>RFQ_Item__c</referenceTo>
    <relationshipName>Purchase_Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>