SubBt/force-app/main/default/objects/Purchase_Order_Item__c/fields/Sub_Contract_Item__c.field-meta.xml
<CustomField>
    <fullName>Sub_Contract_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Contract Item</label>
    <referenceTo>Contract_Item__c</referenceTo>
    <relationshipName>Purchase_Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>