SubBt/force-app/main/default/objects/Purchase_Order_Item__c/fields/Total_Amount_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Tax__c</fullName>
    <formula>(Total_Price__c -  Discounted_Amount__c)  + ((Quantity__c  *  Unit_Price__c) *  Tax__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>